--- a/Serious_Games/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Serious_Games/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -136,8 +136,9 @@ RotGridEnabled=False
 LastLevel=/Game/FirstPerson/Maps/FirstPersonMap
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 OpenAssetsAtExit=/Game/OurProject/Maps/bedroom_scene/assets/fairy_lights/fairylight_filament.fairylight_filament
+OpenAssetsAtExit=/Game/OurProject/Maps/bedroom_scene/assets/fairy_lights/fairylight_filament_Inst.fairylight_filament_Inst
 OpenAssetsAtExit=/Game/OurProject/Maps/bedroom_scene/assets/floor_lamp/bulb_glass_mat.bulb_glass_mat
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
@@ -153,7 +154,7 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/FirstPerson/Maps/FirstPersonMap.FirstPersonMap", ()))
 
 [RootWindow]
-ScreenPosition=X=0.000 Y=306.000
+ScreenPosition=X=438.000 Y=-9.000
 WindowSize=X=1280.000 Y=720.000
 InitiallyMaximized=True
 
@@ -175,7 +176,7 @@ WorldSettings="\"Object.WorldPartitionSetup.WorldPartition.Object.WorldPartition
 Info=
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
-Object="\"Object\" "
+Object="\"Object\" \"Object.PhysicalMaterialMask.PhysicalMaterialMap\" \"Object.TranslucencySelfShadowing.TranslucentMultipleScatteringExtinction\" \"Object.Lightmass.LightmassSettings\" "
 CapsuleComponent="\"Object\" "
 ShapeComponent="\"Object\" "
 PrimitiveComponent="\"Object\" "
@@ -188,7 +189,7 @@ Actor="\"Object\" "
 MaterialEditorInstanceConstant="\"Object\" "
 MaterialInstanceConstant="\"Object\" "
 MaterialInstance="\"Object\" "
-MaterialInterface="\"Object\" "
+MaterialInterface="\"Object\" \"Object.PhysicalMaterialMask.PhysicalMaterialMap\" \"Object.TranslucencySelfShadowing.TranslucentMultipleScatteringExtinction\" \"Object.Lightmass.LightmassSettings\" "
 PreviewMaterial="\"Object\" \"Object.PhysicalMaterialMask.PhysicalMaterialMap\" \"Object.TranslucencySelfShadowing.TranslucentMultipleScatteringExtinction\" \"Object.Lightmass.LightmassSettings\" "
 Material="\"Object\" \"Object.PhysicalMaterialMask.PhysicalMaterialMap\" \"Object.TranslucencySelfShadowing.TranslucentMultipleScatteringExtinction\" \"Object.Lightmass.LightmassSettings\" "
 MaterialExpressionMaterialFunctionCall="\"Object\" "
@@ -1338,16 +1339,16 @@ MovieSceneCapture.TimeStamp=2023.09.07-10.35.10
 MovieSceneCapture.LastCompileMethod=External
 FontEditor.TimeStamp=2022.10.26-07.00.09
 FontEditor.LastCompileMethod=Unknown
-ExternalImagePicker.TimeStamp=2022.09.18-05.50.02
-ExternalImagePicker.LastCompileMethod=Unknown
+ExternalImagePicker.TimeStamp=2023.09.07-10.35.07
+ExternalImagePicker.LastCompileMethod=External
 HierarchicalLODUtilities.TimeStamp=2023.09.07-10.35.07
 HierarchicalLODUtilities.LastCompileMethod=Unknown
 WebBrowser.TimeStamp=2023.09.07-10.35.19
 WebBrowser.LastCompileMethod=External
 TextureEditor.TimeStamp=2023.09.07-10.35.16
 TextureEditor.LastCompileMethod=Unknown
-BlueprintGraph.TimeStamp=2022.07.27-04.21.14
-BlueprintGraph.LastCompileMethod=Unknown
+BlueprintGraph.TimeStamp=2023.09.07-10.35.01
+BlueprintGraph.LastCompileMethod=External
 
 [Python]
 LastDirectory=
@@ -1355,7 +1356,7 @@ RecentsFiles=C:/Program Files/Epic Games/UE_5.0/Engine/Plugins/Animation/Control
 RecentsFiles=C:/Epic/UE_5.0/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/OurProject/Maps/bedroom_scene/assets/pot_plants
+ContentBrowserTab1.SelectedPaths=/Game/OurProject/Maps/bedroom_scene/assets/fairy_lights
 ContentBrowserDrawer.SourcesExpanded=True
 ContentBrowserDrawer.Locked=False
 ContentBrowserDrawer.FavoritesAreaExpanded=False
@@ -1384,7 +1385,7 @@ ContentBrowserDrawer.CurrentViewType=1
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.Locked=False
 ContentBrowserTab1.FavoritesAreaExpanded=True
-ContentBrowserTab1.PathAreaExpanded=True
+ContentBrowserTab1.PathAreaExpanded=False
 ContentBrowserTab1.CollectionAreaExpanded=False
 ContentBrowserTab1.FavoritesSearchAreaExpanded=False
 ContentBrowserTab1.PathSearchAreaExpanded=False
@@ -2468,10 +2469,11 @@ RecentlyPlaced=/Game/Megascans/Surfaces/Wooden_Planks_ueynbafew/MI_Wooden_Planks
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
+bShowGrid=False
 
 [DetailCustomWidgetExpansion]
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Surface Properties,MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Texture Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Vector Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.00 - Global,MaterialEditorInstanceConstant.ParameterGroups.01 - Albedo,MaterialEditorInstanceConstant.ParameterGroups.02 - Metallic,MaterialEditorInstanceConstant.ParameterGroups.03 - Specular,MaterialEditorInstanceConstant.ParameterGroups.04 - Roughness,MaterialEditorInstanceConstant.ParameterGroups.05 - Normal,MaterialEditorInstanceConstant.ParameterGroups.06 - SSS,MaterialEditorInstanceConstant.ParameterGroups.07 - Texture Maps,MaterialEditorInstanceConstant.ParameterGroups.Global Static Switch Parameter Values,
-MaterialInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Surface Properties,MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Texture Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Vector Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.00 - Global,MaterialEditorInstanceConstant.ParameterGroups.01 - Albedo,MaterialEditorInstanceConstant.ParameterGroups.02 - Metallic,MaterialEditorInstanceConstant.ParameterGroups.03 - Specular,MaterialEditorInstanceConstant.ParameterGroups.04 - Roughness,MaterialEditorInstanceConstant.ParameterGroups.05 - Normal,MaterialEditorInstanceConstant.ParameterGroups.06 - SSS,MaterialEditorInstanceConstant.ParameterGroups.07 - Texture Maps,MaterialEditorInstanceConstant.ParameterGroups.Global Static Switch Parameter Values,
+MaterialInstanceConstant=
 LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
 GeneralProjectSettings=InputSettings.Bindings.AxisMappings.Move Forward / Backward,InputSettings.Bindings.AxisMappings.Move Right / Left,InputSettings.Bindings.AxisMappings,IOSRuntimeSettings.Build.Remote Build Options,GameMapsSettings.DefaultModes.SelectedGameModeDetails,HoloLensTargetSettings.Packaging.LocalizedResources,HoloLensTargetSettings.Packaging.NeutralResources,
 CryptoKeysSettings=InputSettings.Bindings.AxisMappings.Move Forward / Backward,InputSettings.Bindings.AxisMappings.Move Right / Left,InputSettings.Bindings.AxisMappings,IOSRuntimeSettings.Build.Remote Build Options,GameMapsSettings.DefaultModes.SelectedGameModeDetails,HoloLensTargetSettings.Packaging.LocalizedResources,HoloLensTargetSettings.Packaging.NeutralResources,
@@ -2608,7 +2610,7 @@ PostProcessVolume=PostProcessVolume.Reflections.Reflections|Lumen Reflections,Po
 BrushComponent=PostProcessVolume.Lens.Lens|Bloom,PostProcessVolume.Lens.Lens|BloomAdvanced,PostProcessVolume.Reflections.Reflections|Lumen Reflections,PostProcessVolume.Reflections.Reflections|Screen Space Reflections,PostProcessVolume.Reflections.Reflections|Ray Tracing Reflections,PostProcessVolume.Rendering Features.Rendering Features|Ray Tracing Translucency,PostProcessVolume.Rendering Features.Rendering Features|PathTracing,PostProcessVolume.Lens.Lens|Mobile Depth of FieldAdvanced,PostProcessVolume.Lens.Lens|Image Effects,PostProcessVolume.Lens.Lens|Exposure,PostProcessVolume.Lens.Lens|Chromatic Aberration,PostProcessVolume.Lens.Lens|Dirt Mask,PostProcessVolume.Lens.Lens|Camera,PostProcessVolume.Lens.Lens|Local Exposure,PostProcessVolume.Lens.Lens|Lens Flares,PostProcessVolume.Lens.Lens|Depth of Field,PostProcessVolume.Color Grading.Color Grading|Temperature,PostProcessVolume.Color Grading.Color Grading|Global,PostProcessVolume.Color Grading.Color Grading|Misc,PostProcessVolume.Global Illumination.Global Illumination|Lumen Global IlluminationAdvanced,PostProcessVolume.Global Illumination.Global Illumination|Lumen Global Illumination,PostProcessVolume.Global Illumination.Global Illumination|Ray Tracing Global Illumination,PostProcessVolume.Rendering Features.Rendering Features|Ambient Cubemap,PostProcessVolume.Rendering Features.Rendering Features|Ambient OcclusionAdvanced,PostProcessVolume.Rendering Features.Rendering Features|Ambient Occlusion,PostProcessVolume.Rendering Features.Rendering Features|Ray Tracing Ambient Occlusion,PostProcessVolume.Rendering Features.Rendering Features|Motion Blur,PostProcessVolume.Color Grading.Color Grading|Shadows,PostProcessVolume.Color Grading.Color Grading|Highlights,PostProcessVolume.Lens.Lens|ExposureAdvanced,PostProcessVolume.Color Grading.Color Grading|Midtones,PostProcessVolume.Rendering Features.Rendering Features|Translucency,PostProcessVolume.Lens.Lens|Mobile Depth of Field,
 StaticMeshActor=PostProcessVolume.Lens.Lens|Bloom,PostProcessVolume.Lens.Lens|BloomAdvanced,PostProcessVolume.Reflections.Reflections|Lumen Reflections,PostProcessVolume.Reflections.Reflections|Screen Space Reflections,PostProcessVolume.Reflections.Reflections|Ray Tracing Reflections,PostProcessVolume.Rendering Features.Rendering Features|Ray Tracing Translucency,PostProcessVolume.Rendering Features.Rendering Features|PathTracing,PostProcessVolume.Lens.Lens|Mobile Depth of FieldAdvanced,PostProcessVolume.Lens.Lens|Image Effects,PostProcessVolume.Lens.Lens|Exposure,PostProcessVolume.Lens.Lens|Chromatic Aberration,PostProcessVolume.Lens.Lens|Dirt Mask,PostProcessVolume.Lens.Lens|Camera,PostProcessVolume.Lens.Lens|Local Exposure,PostProcessVolume.Lens.Lens|Lens Flares,PostProcessVolume.Lens.Lens|Depth of Field,PostProcessVolume.Color Grading.Color Grading|Temperature,PostProcessVolume.Color Grading.Color Grading|Global,PostProcessVolume.Color Grading.Color Grading|Misc,PostProcessVolume.Global Illumination.Global Illumination|Lumen Global IlluminationAdvanced,PostProcessVolume.Global Illumination.Global Illumination|Lumen Global Illumination,PostProcessVolume.Global Illumination.Global Illumination|Ray Tracing Global Illumination,PostProcessVolume.Rendering Features.Rendering Features|Ambient Cubemap,PostProcessVolume.Rendering Features.Rendering Features|Ambient OcclusionAdvanced,PostProcessVolume.Rendering Features.Rendering Features|Ambient Occlusion,PostProcessVolume.Rendering Features.Rendering Features|Ray Tracing Ambient Occlusion,PostProcessVolume.Rendering Features.Rendering Features|Motion Blur,PostProcessVolume.Color Grading.Color Grading|Shadows,PostProcessVolume.Color Grading.Color Grading|Highlights,PostProcessVolume.Lens.Lens|ExposureAdvanced,PostProcessVolume.Color Grading.Color Grading|Midtones,PostProcessVolume.Rendering Features.Rendering Features|Translucency,PostProcessVolume.Lens.Lens|Mobile Depth of Field,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Materials.MaterialList,
 DirectionalLight=PostProcessVolume.Lens.Lens|Bloom,
-SceneComponent=
+SceneComponent=PostProcessVolume.Lens.Lens|Bloom,PostProcessVolume.Lens.Lens|BloomAdvanced,PostProcessVolume.Reflections.Reflections|Lumen Reflections,PostProcessVolume.Reflections.Reflections|Screen Space Reflections,PostProcessVolume.Reflections.Reflections|Ray Tracing Reflections,PostProcessVolume.Rendering Features.Rendering Features|Ray Tracing Translucency,PostProcessVolume.Rendering Features.Rendering Features|PathTracing,PostProcessVolume.Lens.Lens|Mobile Depth of FieldAdvanced,PostProcessVolume.Lens.Lens|Image Effects,PostProcessVolume.Lens.Lens|Exposure,PostProcessVolume.Lens.Lens|Chromatic Aberration,PostProcessVolume.Lens.Lens|Dirt Mask,PostProcessVolume.Lens.Lens|Camera,PostProcessVolume.Lens.Lens|Local Exposure,PostProcessVolume.Lens.Lens|Lens Flares,PostProcessVolume.Lens.Lens|Depth of Field,PostProcessVolume.Color Grading.Color Grading|Temperature,PostProcessVolume.Color Grading.Color Grading|Global,PostProcessVolume.Color Grading.Color Grading|Misc,PostProcessVolume.Global Illumination.Global Illumination|Lumen Global IlluminationAdvanced,PostProcessVolume.Global Illumination.Global Illumination|Lumen Global Illumination,PostProcessVolume.Global Illumination.Global Illumination|Ray Tracing Global Illumination,PostProcessVolume.Rendering Features.Rendering Features|Ambient Cubemap,PostProcessVolume.Rendering Features.Rendering Features|Ambient OcclusionAdvanced,PostProcessVolume.Rendering Features.Rendering Features|Ambient Occlusion,PostProcessVolume.Rendering Features.Rendering Features|Ray Tracing Ambient Occlusion,PostProcessVolume.Rendering Features.Rendering Features|Motion Blur,PostProcessVolume.Color Grading.Color Grading|Shadows,PostProcessVolume.Color Grading.Color Grading|Highlights,PostProcessVolume.Lens.Lens|ExposureAdvanced,PostProcessVolume.Color Grading.Color Grading|Midtones,PostProcessVolume.Rendering Features.Rendering Features|Translucency,PostProcessVolume.Lens.Lens|Mobile Depth of Field,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Materials.MaterialList,
 CapsuleComponent=PostProcessVolume.Lens.Lens|Bloom,
 PlayerStart=PostProcessVolume.Lens.Lens|Bloom,
 PointLight=PostProcessVolume.Lens.Lens|Bloom,PostProcessVolume.Lens.Lens|BloomAdvanced,PostProcessVolume.Reflections.Reflections|Lumen Reflections,PostProcessVolume.Reflections.Reflections|Screen Space Reflections,PostProcessVolume.Reflections.Reflections|Ray Tracing Reflections,PostProcessVolume.Rendering Features.Rendering Features|Ray Tracing Translucency,PostProcessVolume.Rendering Features.Rendering Features|PathTracing,PostProcessVolume.Lens.Lens|Mobile Depth of FieldAdvanced,PostProcessVolume.Lens.Lens|Image Effects,PostProcessVolume.Lens.Lens|Exposure,PostProcessVolume.Lens.Lens|Chromatic Aberration,PostProcessVolume.Lens.Lens|Dirt Mask,PostProcessVolume.Lens.Lens|Camera,PostProcessVolume.Lens.Lens|Local Exposure,PostProcessVolume.Lens.Lens|Lens Flares,PostProcessVolume.Lens.Lens|Depth of Field,PostProcessVolume.Color Grading.Color Grading|Temperature,PostProcessVolume.Color Grading.Color Grading|Global,PostProcessVolume.Color Grading.Color Grading|Misc,PostProcessVolume.Global Illumination.Global Illumination|Lumen Global IlluminationAdvanced,PostProcessVolume.Global Illumination.Global Illumination|Lumen Global Illumination,PostProcessVolume.Global Illumination.Global Illumination|Ray Tracing Global Illumination,PostProcessVolume.Rendering Features.Rendering Features|Ambient Cubemap,PostProcessVolume.Rendering Features.Rendering Features|Ambient OcclusionAdvanced,PostProcessVolume.Rendering Features.Rendering Features|Ambient Occlusion,PostProcessVolume.Rendering Features.Rendering Features|Ray Tracing Ambient Occlusion,PostProcessVolume.Rendering Features.Rendering Features|Motion Blur,PostProcessVolume.Color Grading.Color Grading|Shadows,PostProcessVolume.Color Grading.Color Grading|Highlights,PostProcessVolume.Lens.Lens|ExposureAdvanced,PostProcessVolume.Color Grading.Color Grading|Midtones,PostProcessVolume.Rendering Features.Rendering Features|Translucency,PostProcessVolume.Lens.Lens|Mobile Depth of Field,
@@ -2722,9 +2724,11 @@ MRUItem19=/Game/OurProject/Maps/bedroom_scene/assets/pot_plants/NewMaterial
 /Game/OurProject/Maps/bedroom_scene/assets/pot_plants/plant_pot_initialShadingGroup_OcclusionRoughnessMetallic.plant_pot_initialShadingGroup_OcclusionRoughnessMetallic=1
 /Game/FirstPerson/Maps/FirstPersonMap.FirstPersonMap:PersistentLevel.FirstPersonMap=1
 /Game/FirstPerson/Maps/FirstPersonMap_BuiltData.FirstPersonMap_BuiltData=1
+/Game/OurProject/Maps/bedroom_scene/assets/fairy_lights/fairylight_filament.fairylight_filament=1
+/Game/OurProject/Maps/bedroom_scene/assets/fairy_lights/fairylight_filament_Inst.fairylight_filament_Inst=1
 
 [MaterialInstanceEditor]
-bShowGrid=False
+bShowGrid=True
 bDrawGrid=False
 PrimType=1
 
