--- a/Serious_Games/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Serious_Games/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -133,12 +133,10 @@ GridEnabled=False
 RotGridEnabled=False
 
 [EditorStartup]
-LastLevel=/Game/FirstPerson/Maps/FirstPersonMap
+LastLevel=/Game/OurProject/Maps/Forest_Scene/ForestScene
 
 [AssetEditorSubsystem]
-CleanShutdown=True
-OpenAssetsAtExit=/Game/OurProject/Maps/bedroom_scene/assets/bedside_lamp/bedside_lamp_base_mat.bedside_lamp_base_mat
-OpenAssetsAtExit=/Game/OurProject/Maps/bedroom_scene/assets/bedside_lamp/bedside_lamp_shade_mat.bedside_lamp_shade_mat
+CleanShutdown=False
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -172,10 +170,10 @@ FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [DetailPropertyExpansion]
 WorldSettings="\"Object.WorldPartitionSetup.WorldPartition.Object.WorldPartition\" "
-Info=
+Info="\"Object.WorldPartitionSetup.WorldPartition.Object.WorldPartition\" "
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
-Object="\"Object\" \"Object.PhysicalMaterialMask.PhysicalMaterialMap\" \"Object.TranslucencySelfShadowing.TranslucentMultipleScatteringExtinction\" \"Object.Lightmass.LightmassSettings\" "
+Object="\"Object\" "
 CapsuleComponent="\"Object\" "
 ShapeComponent="\"Object\" "
 PrimitiveComponent="\"Object\" "
@@ -2602,11 +2600,11 @@ GameplayTagsDeveloperSettings=EditorKeyboardShortcutSettings.LevelEditor.OpenFav
 LogVisualizerSettings=EditorKeyboardShortcutSettings.LevelEditor.OpenFavoriteFile,EditorKeyboardShortcutSettings.LevelEditor.OpenRecentFile,EditorKeyboardShortcutSettings.MainFrame.SwitchProject,
 FoliageType_InstancedStaticMesh=FoliageType_InstancedStaticMesh.Procedural.Collision,FoliageType_InstancedStaticMesh.Procedural.Clustering,FoliageType_InstancedStaticMesh.Procedural.Growth,
 WorldSettings=WorldSettings.WorldPartition.None,
-WorldPartitionRuntimeSpatialHash=
+WorldPartitionRuntimeSpatialHash=WorldSettings.WorldPartition.None,
 StaticMesh=StaticMesh.LOD0.MeshBuildSettings,
-PostProcessVolume=PostProcessVolume.Reflections.Reflections
-BrushComponent=PostProcessVolume.Lens.Lens
-StaticMeshActor=PostProcessVolume.Lens.Lens,
+PostProcessVolume=PostProcessVolume.Reflections.Reflections,PostProcessVolume.Lens.Lens,
+BrushComponent=PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,
+StaticMeshActor=PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,
 DirectionalLight=PostProcessVolume.Lens.Lens
 SceneComponent=PostProcessVolume.Lens.Lens
 CapsuleComponent=PostProcessVolume.Lens.Lens
@@ -2615,26 +2613,26 @@ PointLight=PostProcessVolume.Lens.Lens,
 Actor=PostProcessVolume.Lens.Lens
 
 [ContentBrowserRecent]
-MRUItem0=/Game/OurProject/Maps/bedroom_scene/assets/bedside_lamp/bedside_lamp_shade_mat
-MRUItem1=/Game/OurProject/Maps/bedroom_scene/assets/bedside_lamp/bedside_lamp_base_mat
-MRUItem2=/Game/OurProject/Maps/bedroom_scene/assets/bedside_lamp/bedside_lamp_bedside_lamp_OcclusionRoughnessMetallic
-MRUItem3=/Game/OurProject/Maps/bedroom_scene/assets/bedside_lamp/bedside_lamp_bedside_lamp_support_OcclusionRoughnessMetallic
-MRUItem4=/Game/OurProject/Maps/bedroom_scene/assets/floor_lamp/bulb_glass_mat
-MRUItem5=/Game/OurProject/Maps/bedroom_scene/assets/fairy_lights/fairylight_filament_Inst
-MRUItem6=/Game/OurProject/Maps/bedroom_scene/assets/fairy_lights/fairylight_filament
-MRUItem7=/Game/OurProject/Maps/bedroom_scene/assets/floor_lamp/bulb_filament_mat
-MRUItem8=/Game/OurProject/Maps/bedroom_scene/assets/fairy_lights/M_fairy_lights_bulb_filament_mat_09095DFF41B5FC854698D185F6C21920
-MRUItem9=/Game/OurProject/Maps/bedroom_scene/assets/fairy_lights/fairy_lights
-MRUItem10=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
-MRUItem11=/Game/OurProject/Maps/bedroom_scene/assets/pot_plants/hanging_pot_base
-MRUItem12=/Game/OurProject/Maps/bedroom_scene/assets/pot_plants/plant_pot_initialShadingGroup_OcclusionRoughnessMetallic
-MRUItem13=/Game/OurProject/Maps/bedroom_scene/assets/bookshelf/grunge_texture/bookshelf_lambert7SG_OcclusionRoughnessMetallic
-MRUItem14=/Game/OurProject/Maps/bedroom_scene/assets/bookshelf/grunge_texture/bookshelf_lambert6SG_OcclusionRoughnessMetallic
-MRUItem15=/Game/OurProject/Maps/bedroom_scene/assets/bookshelf/grunge_texture/bookshelf_lambert5SG_OcclusionRoughnessMetallic
-MRUItem16=/Game/OurProject/Maps/bedroom_scene/assets/bookshelf/grunge_texture/NewMaterial2
-MRUItem17=/Game/OurProject/Maps/bedroom_scene/assets/bookshelf/grunge_texture/NewMaterial1
-MRUItem18=/Game/OurProject/Maps/bedroom_scene/assets/bookshelf/grunge_texture/NewMaterial
-MRUItem19=/Game/OurProject/Maps/bedroom_scene/assets/pot_plants/M_hanging_pot_hanging_pot_base_DBE8757A4543DAF8976AA195994F18E7
+MRUItem0=/Game/OurProject/Maps/Forest_Scene/ForestScene
+MRUItem1=/Game/OurProject/Maps/bedroom_scene/assets/bedside_lamp/bedside_lamp_shade_mat
+MRUItem2=/Game/OurProject/Maps/bedroom_scene/assets/bedside_lamp/bedside_lamp_base_mat
+MRUItem3=/Game/OurProject/Maps/bedroom_scene/assets/bedside_lamp/bedside_lamp_bedside_lamp_OcclusionRoughnessMetallic
+MRUItem4=/Game/OurProject/Maps/bedroom_scene/assets/bedside_lamp/bedside_lamp_bedside_lamp_support_OcclusionRoughnessMetallic
+MRUItem5=/Game/OurProject/Maps/bedroom_scene/assets/floor_lamp/bulb_glass_mat
+MRUItem6=/Game/OurProject/Maps/bedroom_scene/assets/fairy_lights/fairylight_filament_Inst
+MRUItem7=/Game/OurProject/Maps/bedroom_scene/assets/fairy_lights/fairylight_filament
+MRUItem8=/Game/OurProject/Maps/bedroom_scene/assets/floor_lamp/bulb_filament_mat
+MRUItem9=/Game/OurProject/Maps/bedroom_scene/assets/fairy_lights/M_fairy_lights_bulb_filament_mat_09095DFF41B5FC854698D185F6C21920
+MRUItem10=/Game/OurProject/Maps/bedroom_scene/assets/fairy_lights/fairy_lights
+MRUItem11=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
+MRUItem12=/Game/OurProject/Maps/bedroom_scene/assets/pot_plants/hanging_pot_base
+MRUItem13=/Game/OurProject/Maps/bedroom_scene/assets/pot_plants/plant_pot_initialShadingGroup_OcclusionRoughnessMetallic
+MRUItem14=/Game/OurProject/Maps/bedroom_scene/assets/bookshelf/grunge_texture/bookshelf_lambert7SG_OcclusionRoughnessMetallic
+MRUItem15=/Game/OurProject/Maps/bedroom_scene/assets/bookshelf/grunge_texture/bookshelf_lambert6SG_OcclusionRoughnessMetallic
+MRUItem16=/Game/OurProject/Maps/bedroom_scene/assets/bookshelf/grunge_texture/bookshelf_lambert5SG_OcclusionRoughnessMetallic
+MRUItem17=/Game/OurProject/Maps/bedroom_scene/assets/bookshelf/grunge_texture/NewMaterial2
+MRUItem18=/Game/OurProject/Maps/bedroom_scene/assets/bookshelf/grunge_texture/NewMaterial1
+MRUItem19=/Game/OurProject/Maps/bedroom_scene/assets/bookshelf/grunge_texture/NewMaterial
 
 [AssetEditorToolkitTabLocation]
 /Game/LevelPrototyping/Materials/MI_Solid_Blue.MI_Solid_Blue=1
