--- a/Serious_Games/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Serious_Games/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -128,15 +128,13 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 CameraSpeed=3
 CurrentRotGridSize=0
 CurrentScalingGridSize=4
-CurrentPosGridSize=1
-GridEnabled=False
-RotGridEnabled=False
 
 [EditorStartup]
-LastLevel=/Game/OurProject/Maps/Forest_Scene/ForestScene
+LastLevel=/Game/FirstPerson/Maps/FirstPersonMap
 
 [AssetEditorSubsystem]
 CleanShutdown=False
+OpenAssetsAtExit=/Game/OurProject/Rain_NS.Rain_NS
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -170,7 +168,7 @@ FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [DetailPropertyExpansion]
 WorldSettings="\"Object.WorldPartitionSetup.WorldPartition.Object.WorldPartition\" "
-Info="\"Object.WorldPartitionSetup.WorldPartition.Object.WorldPartition\" "
+Info=
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
 Object="\"Object\" "
@@ -327,7 +325,7 @@ Volume="\"Object\" \"Object.PostProcessVolumeSettings.Settings.ColorGainShadows\
 Brush="\"Object\" \"Object.PostProcessVolumeSettings.Settings.ColorGainShadows\" \"Object.PostProcessVolumeSettings.Settings.SceneColorTint\" \"Object.PostProcessVolumeSettings.Settings.Bloom1Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom2Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom3Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom4Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom5Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom6Tint\" \"Object.PostProcessVolumeSettings.Settings.BloomDirtMaskTint\" \"Object.PostProcessVolumeSettings.Settings.IndirectLightingColor\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTint\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[0]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[1]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[2]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[3]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[4]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[5]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[6]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[7]\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 BrushComponent="\"Object\" "
 PointLight="\"Object\" \"Object.Light.PointLightComponent.Object.Light.LightColor\" "
-Light="\"Object\" \"Object.Light.PointLightComponent.Object.Light.LightColor\" "
+Light="\"Object\" "
 StaticMeshComponent="\"Object\" "
 EditorStyleSettings="\"Object\" \"Object.Graphs.GraphBackgroundBrush\" \"Object.Graphs.GraphBackgroundBrush.TintColor\" \"Object.Graphs.GraphBackgroundBrush.OutlineSettings.Color\" "
 AudioEditorSettings="\"Object\" "
@@ -404,6 +402,12 @@ RecastNavMesh="\"Object\" \"Object.Display.TileGenerationDebug\" "
 NavigationData="\"Object\" \"Object.Display.TileGenerationDebug\" "
 DirectionalLightComponent="\"Object\" "
 TransformMeshesToolProperties="\"Object\" "
+DirectionalLight="\"Object\" "
+SkyAtmosphere="\"Object.Atmosphere.SkyAtmosphereComponent.Object.OtherAbsorption\" "
+SpotLight="\"Object\" "
+BillboardComponent="\"Object\" "
+RectLight="\"Object\" "
+NiagaraBakerSettings="\"Object\" "
 
 [Directories2]
 UNR=../../../../../../Users/linch/OneDrive/Documents/GitHub/Serious_Games/Serious_Games/Content/OurProject/Maps/Forest_Scene
@@ -2440,13 +2444,42 @@ TransformMeshesToolProperties.SnapDragging=True
 PostProcessVolume.Cooking=True
 PostProcessVolume.DataLayers=True
 Actor.Cooking=True
+BrushComponent.TransformCommon=True
+BrushComponent.HLOD=True
+BrushComponent.Collision=True
+BrushComponent.Navigation=True
+BrushComponent.Tags=True
+BrushComponent.Cooking=True
+WorldPartitionMiniMap.TransformCommon=True
+WorldPartitionMiniMap.WorldPartitionMiniMap=True
+StaticMeshActor.LOD=False
+NiagaraActor.TransformCommon=True
+NiagaraActor.Niagara=True
+NiagaraActor.Activation=True
+NiagaraActor.Lighting=True
+NiagaraActor.Attachment=True
+NiagaraActor.Randomness=True
+NiagaraActor.Parameters=True
+NiagaraActor.Materials=True
+NiagaraActor.Compilation=True
+NiagaraActor.HLOD=True
+NiagaraActor.Rendering=True
+NiagaraActor.Navigation=True
+NiagaraActor.Tags=True
+NiagaraActor.Cooking=True
+NiagaraActor.Replication=True
+NiagaraActor.WorldPartition=True
+NiagaraActor.Actor=True
 
 [PlacementMode]
+RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBasicShape_0
+RecentlyPlaced=/Game/OurProject/Rain_NS.Rain_NS;
+RecentlyPlaced=/Script/Engine.SkyLight;/Engine/Transient.ActorFactorySkyLight_0
+RecentlyPlaced=/Script/Engine.RectLight;/Engine/Transient.ActorFactoryRectLight_0
 RecentlyPlaced=/Game/OurProject/Maps/bedroom_scene/assets/bedside_lamp/bedside_lamp_shade_mat.bedside_lamp_shade_mat;
 RecentlyPlaced=/Game/OurProject/Maps/bedroom_scene/assets/bedside_lamp/bedside_lamp.bedside_lamp;
 RecentlyPlaced=/Game/OurProject/Maps/bedroom_scene/assets/fairy_lights/fairylight_filament.fairylight_filament;
 RecentlyPlaced=/Game/OurProject/Maps/bedroom_scene/assets/fairy_lights/fairy_lights.fairy_lights;
-RecentlyPlaced=/Script/Engine.RectLight;/Engine/Transient.ActorFactoryRectLight_0
 RecentlyPlaced=/Game/OurProject/Maps/bedroom_scene/assets/bookshelf/grunge_texture/NewMaterial2.NewMaterial2;
 RecentlyPlaced=/Game/OurProject/Maps/bedroom_scene/assets/bookshelf/grunge_texture/NewMaterial1.NewMaterial1;
 RecentlyPlaced=/Game/OurProject/Maps/bedroom_scene/assets/bookshelf/grunge_texture/NewMaterial.NewMaterial;
@@ -2459,13 +2492,11 @@ RecentlyPlaced=/Game/OurProject/Maps/bedroom_scene/assets/pot_plants/hanging_pot
 RecentlyPlaced=/Script/Engine.SpotLight;/Engine/Transient.ActorFactorySpotLight_0
 RecentlyPlaced=/Game/Megascans/Surfaces/Wall_Paint_sj0jecrc/MI_Wall_Paint_sj0jecrc_4K.MI_Wall_Paint_sj0jecrc_4K;
 RecentlyPlaced=/Game/LevelPrototyping/Materials/MI_Solid_Brown.MI_Solid_Brown;
-RecentlyPlaced=/Game/OurProject/Maps/bedroom_scene/assets/books/closed_book_brown.closed_book_brown;
-RecentlyPlaced=/Game/OurProject/Maps/bedroom_scene/assets/books/closed_book_mat_red.closed_book_mat_red;
-RecentlyPlaced=/Game/Megascans/Surfaces/English_Walnut_Parquet_udlxbgtl/MI_English_Walnut_Parquet_udlxbgtl_4K.MI_English_Walnut_Parquet_udlxbgtl_4K;
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
+bShowGrid=False
 
 [DetailCustomWidgetExpansion]
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Surface Properties,MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Texture Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Vector Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.00 - Global,MaterialEditorInstanceConstant.ParameterGroups.01 - Albedo,MaterialEditorInstanceConstant.ParameterGroups.02 - Metallic,MaterialEditorInstanceConstant.ParameterGroups.03 - Specular,MaterialEditorInstanceConstant.ParameterGroups.04 - Roughness,MaterialEditorInstanceConstant.ParameterGroups.05 - Normal,MaterialEditorInstanceConstant.ParameterGroups.06 - SSS,MaterialEditorInstanceConstant.ParameterGroups.07 - Texture Maps,MaterialEditorInstanceConstant.ParameterGroups.Global Static Switch Parameter Values,
@@ -2603,36 +2634,42 @@ WorldSettings=WorldSettings.WorldPartition.None,
 WorldPartitionRuntimeSpatialHash=WorldSettings.WorldPartition.None,
 StaticMesh=StaticMesh.LOD0.MeshBuildSettings,
 PostProcessVolume=PostProcessVolume.Reflections.Reflections,PostProcessVolume.Lens.Lens,
-BrushComponent=PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,
+BrushComponent=PostProcessVolume.Reflections.Reflections,PostProcessVolume.Lens.Lens,
 StaticMeshActor=PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,
-DirectionalLight=PostProcessVolume.Lens.Lens
-SceneComponent=PostProcessVolume.Lens.Lens
+DirectionalLight=PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,
+SceneComponent=PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,
 CapsuleComponent=PostProcessVolume.Lens.Lens
 PlayerStart=PostProcessVolume.Lens.Lens
-PointLight=PostProcessVolume.Lens.Lens,
-Actor=PostProcessVolume.Lens.Lens
+PointLight=PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,
+Actor=PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,
+SkyAtmosphere=PostProcessVolume.Reflections.Reflections,PostProcessVolume.Lens.Lens,
+BillboardComponent=PostProcessVolume.Reflections.Reflections,PostProcessVolume.Lens.Lens,
+WorldPartitionMiniMap=PostProcessVolume.Reflections.Reflections,PostProcessVolume.Lens.Lens,
+WorldDataLayers=PostProcessVolume.Reflections.Reflections,PostProcessVolume.Lens.Lens,
+SkyLight=PostProcessVolume.Reflections.Reflections,PostProcessVolume.Lens.Lens,
+RectLight=PostProcessVolume.Reflections.Reflections,PostProcessVolume.Lens.Lens,
 
 [ContentBrowserRecent]
-MRUItem0=/Game/OurProject/Maps/Forest_Scene/ForestScene
-MRUItem1=/Game/OurProject/Maps/bedroom_scene/assets/bedside_lamp/bedside_lamp_shade_mat
-MRUItem2=/Game/OurProject/Maps/bedroom_scene/assets/bedside_lamp/bedside_lamp_base_mat
-MRUItem3=/Game/OurProject/Maps/bedroom_scene/assets/bedside_lamp/bedside_lamp_bedside_lamp_OcclusionRoughnessMetallic
-MRUItem4=/Game/OurProject/Maps/bedroom_scene/assets/bedside_lamp/bedside_lamp_bedside_lamp_support_OcclusionRoughnessMetallic
-MRUItem5=/Game/OurProject/Maps/bedroom_scene/assets/floor_lamp/bulb_glass_mat
-MRUItem6=/Game/OurProject/Maps/bedroom_scene/assets/fairy_lights/fairylight_filament_Inst
-MRUItem7=/Game/OurProject/Maps/bedroom_scene/assets/fairy_lights/fairylight_filament
-MRUItem8=/Game/OurProject/Maps/bedroom_scene/assets/floor_lamp/bulb_filament_mat
-MRUItem9=/Game/OurProject/Maps/bedroom_scene/assets/fairy_lights/M_fairy_lights_bulb_filament_mat_09095DFF41B5FC854698D185F6C21920
-MRUItem10=/Game/OurProject/Maps/bedroom_scene/assets/fairy_lights/fairy_lights
-MRUItem11=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
-MRUItem12=/Game/OurProject/Maps/bedroom_scene/assets/pot_plants/hanging_pot_base
-MRUItem13=/Game/OurProject/Maps/bedroom_scene/assets/pot_plants/plant_pot_initialShadingGroup_OcclusionRoughnessMetallic
-MRUItem14=/Game/OurProject/Maps/bedroom_scene/assets/bookshelf/grunge_texture/bookshelf_lambert7SG_OcclusionRoughnessMetallic
-MRUItem15=/Game/OurProject/Maps/bedroom_scene/assets/bookshelf/grunge_texture/bookshelf_lambert6SG_OcclusionRoughnessMetallic
-MRUItem16=/Game/OurProject/Maps/bedroom_scene/assets/bookshelf/grunge_texture/bookshelf_lambert5SG_OcclusionRoughnessMetallic
-MRUItem17=/Game/OurProject/Maps/bedroom_scene/assets/bookshelf/grunge_texture/NewMaterial2
-MRUItem18=/Game/OurProject/Maps/bedroom_scene/assets/bookshelf/grunge_texture/NewMaterial1
-MRUItem19=/Game/OurProject/Maps/bedroom_scene/assets/bookshelf/grunge_texture/NewMaterial
+MRUItem0=/Niagara/DefaultAssets/DefaultSpriteMaterial
+MRUItem1=/Game/OurProject/Rain_NS
+MRUItem2=/Game/OurProject/Maps/Forest_Scene/ForestScene
+MRUItem3=/Game/OurProject/Maps/bedroom_scene/assets/bedside_lamp/bedside_lamp_shade_mat
+MRUItem4=/Game/OurProject/Maps/bedroom_scene/assets/bedside_lamp/bedside_lamp_base_mat
+MRUItem5=/Game/OurProject/Maps/bedroom_scene/assets/bedside_lamp/bedside_lamp_bedside_lamp_OcclusionRoughnessMetallic
+MRUItem6=/Game/OurProject/Maps/bedroom_scene/assets/bedside_lamp/bedside_lamp_bedside_lamp_support_OcclusionRoughnessMetallic
+MRUItem7=/Game/OurProject/Maps/bedroom_scene/assets/floor_lamp/bulb_glass_mat
+MRUItem8=/Game/OurProject/Maps/bedroom_scene/assets/fairy_lights/fairylight_filament_Inst
+MRUItem9=/Game/OurProject/Maps/bedroom_scene/assets/fairy_lights/fairylight_filament
+MRUItem10=/Game/OurProject/Maps/bedroom_scene/assets/floor_lamp/bulb_filament_mat
+MRUItem11=/Game/OurProject/Maps/bedroom_scene/assets/fairy_lights/M_fairy_lights_bulb_filament_mat_09095DFF41B5FC854698D185F6C21920
+MRUItem12=/Game/OurProject/Maps/bedroom_scene/assets/fairy_lights/fairy_lights
+MRUItem13=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
+MRUItem14=/Game/OurProject/Maps/bedroom_scene/assets/pot_plants/hanging_pot_base
+MRUItem15=/Game/OurProject/Maps/bedroom_scene/assets/pot_plants/plant_pot_initialShadingGroup_OcclusionRoughnessMetallic
+MRUItem16=/Game/OurProject/Maps/bedroom_scene/assets/bookshelf/grunge_texture/bookshelf_lambert7SG_OcclusionRoughnessMetallic
+MRUItem17=/Game/OurProject/Maps/bedroom_scene/assets/bookshelf/grunge_texture/bookshelf_lambert6SG_OcclusionRoughnessMetallic
+MRUItem18=/Game/OurProject/Maps/bedroom_scene/assets/bookshelf/grunge_texture/bookshelf_lambert5SG_OcclusionRoughnessMetallic
+MRUItem19=/Game/OurProject/Maps/bedroom_scene/assets/bookshelf/grunge_texture/NewMaterial2
 
 [AssetEditorToolkitTabLocation]
 /Game/LevelPrototyping/Materials/MI_Solid_Blue.MI_Solid_Blue=1
@@ -2724,6 +2761,8 @@ MRUItem19=/Game/OurProject/Maps/bedroom_scene/assets/bookshelf/grunge_texture/Ne
 /Game/OurProject/Maps/bedroom_scene/assets/fairy_lights/fairylight_filament_Inst.fairylight_filament_Inst=1
 /Game/OurProject/Maps/bedroom_scene/assets/bedside_lamp/bedside_lamp_base_mat.bedside_lamp_base_mat=1
 /Game/OurProject/Maps/bedroom_scene/assets/bedside_lamp/bedside_lamp_shade_mat.bedside_lamp_shade_mat=1
+/Game/OurProject/Rain_NS.Rain_NS=1
+/Niagara/DefaultAssets/DefaultSpriteMaterial.DefaultSpriteMaterial=1
 
 [MaterialInstanceEditor]
 bShowGrid=True
@@ -2853,6 +2892,11 @@ DirectionalLight.Light=False
 PointLight.Light=True
 PlayerStart.Actor=False
 BP_FirstPersonCharacter_C.Collision=False
+RectLight.Light=False
+StaticMeshActor.Actor=False
+SkyAtmosphere.Actor=False
+StaticMeshActor.Collision=False
+StaticMeshActor.Physics=False
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
